--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.6.1",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.5.13",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
